--- a/geo.html
+++ b/geo.html
@@ -37,7 +37,7 @@
         </div>
         <div class="flex flex-row m-5 space-x-5 ">
             <a href="Almaty.html">
-                <img class="h-48 w-64 object-fill" src="..\fregie_tailwind\img\almaty.jpg" />
+                <img class="h-48 w-64 object-fill" src="\img\almaty.jpg" />
             </a>
             <a href="Zhetsuyo.html" >
                 <img class="h-48 w-64 object-fill" src="..\fregie_tailwind\img\Zhetsuyo.jpg" />
