--- a/geo.html
+++ b/geo.html
@@ -40,7 +40,7 @@
                 <img class="h-48 w-64 object-fill" src="\img\almaty.jpg" />
             </a>
             <a href="Zhetsuyo.html" >
-                <img class="h-48 w-64 object-fill" src="..\fregie_tailwind\img\Zhetsuyo.jpg" />
+                <img class="h-48 w-64 object-fill" src="\img\Zhetsuyo.jpg" />
             </a>
             
         </div>
